--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,3 +3,19 @@
 *,*::before, *::after{
     box-sizing: border-box;
 }
+html{
+    font-size: 16px;
+}
+:root{
+    --main-font-size: clamp(1rem, 2vw + 0.5rem, 1.25rem);
+    --main-line-height: 1.5;
+    --h2-size: clamp(1.75rem, 3.5vw + 0.75rem, 3rem); 
+}
+body{
+    font-size: var(--main-font-size);
+    line-height: var(--main-line-height);
+}
+h1{
+    font-size: var(--h2-size);
+    line-height: 1.2;
+}
