--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,8 @@ html{
     --main-font-size: clamp(1rem, 2vw + 0.5rem, 1.25rem);
     --main-line-height: 1.5;
     --h2-size: clamp(1.75rem, 3.5vw + 0.75rem, 3rem); 
+    --intor-BKG: rgb(8 145 178);
+    --footer-BGC: rgb(8 145 178);
 }
 body{
     font-size: var(--main-font-size);
