--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,17 +7,68 @@ html{
     font-size: 16px;
 }
 :root{
-    --main-font-size: clamp(1rem, 2vw + 0.5rem, 1.25rem);
+    --main-font-size: clamp(1rem, 1vw + 0.5rem, 1.125rem);
     --main-line-height: 1.5;
     --h2-size: clamp(1.75rem, 3.5vw + 0.75rem, 3rem); 
-    --intor-BKG: rgb(8 145 178);
+    --intro-BKG: rgb(8 145 178);
     --footer-BGC: rgb(8 145 178);
 }
 body{
     font-size: var(--main-font-size);
     line-height: var(--main-line-height);
+  
 }
 h1{
     font-size: var(--h2-size);
     line-height: 1.2;
+}
+.introduction{
+    position: relative;
+    
+}
+.decorativeBG{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    background-color: var(--intro-BKG);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    clip-path: polygon(0% 0%, 0% 100%, 100% 70%, 100% 0%);
+    
+}
+.introContainer{
+    display: flex;
+    padding: clamp(1rem, 1rem + 2vw, 3rem);
+ 
+}
+.introContainer > *{
+    flex: 1 1 0;
+}
+.introContainer > img{
+    flex-grow: 0.7;
+    width: 0%;
+    border-radius: 9px;
+}
+article{
+    background-color: white;
+    max-width: 75ch;
+    padding: clamp(1rem, 1rem + 0.4vw, 3rem);
+    transform: scale(0.9) translateX(-6%);
+    z-index: -1;
+   
+}
+ul{
+    list-style: none;
+}
+a{
+    text-decoration: none;
+}
+.socialMediaContainer{
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.5rem;
+}
+.socialMediaIcons{
+    width: 20px;
 }
