--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,3 +72,32 @@ a{
 .socialMediaIcons{
     width: 20px;
 }
+@media (max-width: 500px){
+   
+    .decorativeBG{
+        clip-path: polygon(0% 0%, 0% 30%, 100% 10%, 100% 0%);
+        
+    }
+    .introContainer{
+        display: flex;
+        flex-direction: column;
+    }
+    .introContainer > img{
+        width: 100%;
+        height: auto;
+    }
+    article{
+        background-color: white;
+        max-width: 55ch;
+        padding: clamp(1rem, 1rem + 0.4vw, 3rem);
+        transform: scale(1) translateX(0%);
+        z-index: -1;
+        margin-top: 1rem;
+       
+    }
+    .socialMediaContainer{
+        justify-content: center;
+        
+    }
+
+}
