--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,13 +41,12 @@ h1{
     display: flex;
     padding: clamp(1rem, 1rem + 2vw, 3rem);
 
- 
 }
 .introContainer > article{
     flex-grow: 1;
 }
 .introContainer > img{
-    width: 50%;
+    width: max(350px, 50%);
     border-radius: 9px;
     height: auto;
 }
@@ -56,8 +55,6 @@ article{
     max-width: 75ch;
     padding: clamp(1rem, 1rem + 0.4vw, 3rem);
     transform: scale(0.9) translateX(-5.6%);
-
-   
 }
 ul{
     list-style: none;
@@ -73,8 +70,7 @@ a{
 .socialMediaIcons{
     width: 20px;
 }
-@media (max-width: 500px){
-   
+@media (max-width: 520px){
     .decorativeBG{
         clip-path: polygon(0% 0%, 0% 30%, 100% 10%, 100% 0%);
         
@@ -98,6 +94,25 @@ a{
     .socialMediaContainer{
         justify-content: center;
         
+    }
+
+}
+@media(min-width: 521px) and (max-width: 1024px){
+
+    .introContainer{
+        display: block;
+    }
+    .introContainer > img{
+        position: relative;
+        z-index: 2;
+       float: left;
+       border-top-left-radius: 0;
+       margin: 0 1rem 0 0;
+      
+    }
+    article{
+        transform: scale(1) translateX(0%);
+        max-width: none;
     }
 
 }
